--- a/index.html
+++ b/index.html
@@ -4,26 +4,86 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Home | Human Rights Organization</title>
+
+  <!-- SEO Meta Tags -->
+  <meta name="description" content="We defend human rights and promote justice. Join us in making the world fair and equal for everyone.">
+  <meta name="keywords" content="human rights, justice, equality, NGO, activism">
+  <meta name="author" content="Human Rights Organization">
+
+  <!-- Tailwind CSS -->
   <script src="https://cdn.tailwindcss.com"></script>
+
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+  <style>
+    body {
+      font-family: 'Inter', sans-serif;
+    }
+  </style>
+
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" href="assets/favicon.png">
 </head>
-<body class="bg-gray-100 text-gray-900">
+<body class="bg-gray-100 text-gray-900 min-h-screen flex flex-col">
 
   <!-- Navigation -->
-  <div id="navbar-container"></div>
+  <div id="navbar-container">
+    <p class="text-center text-gray-500">Loading menu...</p>
+  </div>
 
-  <!-- Hero Section -->
-  <header class="bg-blue-500 text-white text-center p-16">
-    <h1 class="text-4xl font-bold">Defending Human Rights, Together</h1>
-    <p class="mt-4 text-lg">Join us in our mission to create a fair and just world.</p>
-      </header>
+  <!-- Main Content -->
+  <div class="flex-grow max-w-screen-xl mx-auto px-4">
+    
+    <!-- Hero Section -->
+ <!-- Hero Section -->
+<header class="mt-4 bg-gradient-to-r from-orange-400 to-red-300 text-white text-center py-12 md:py-16 px-6 md:px-12">
+    <div class="max-w-3xl mx-auto">
+      <h1 class="text-4xl font-semibold drop-shadow-lg">Defending Human Rights, Together</h1>
+      <p class="mt-4 text-lg drop-shadow-md">Join us in our mission to create a fair and just world.</p>
+    </div>
+  </header>
+  
 
-  <!-- Footer -->
-  <footer class="bg-gray-900 text-white text-center p-4 mt-10">
-    <p>&copy; 2025 Human Rights Organization. All rights reserved.</p>
-  </footer>
+    <!-- Photo Gallery Section -->
+    <section class="px-4 py-10">
+      <h2 class="text-3xl font-bold text-center mb-6">Our Work in Action</h2>
+      
+      <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4">
+        <img src="assets/image1.jpg" alt="Community Gathering" class="w-full h-auto object-cover rounded-lg shadow-md">
+        <img src="assets/image2.jpg" alt="Conference Discussion" class="w-full h-auto object-cover rounded-lg shadow-md">
+        <img src="assets/image3.jpg" alt="Public Speech" class="w-full h-auto object-cover rounded-lg shadow-md">
+        <img src="assets/image1.jpg" alt="Social Awareness Event" class="w-full h-auto object-cover rounded-lg shadow-md">
+        <img src="assets/image2.jpg" alt="Legal Aid Camp" class="w-full h-auto object-cover rounded-lg shadow-md">
+        <img src="assets/image3.jpg" alt="Human Rights Protest" class="w-full h-auto object-cover rounded-lg shadow-md">
+        <img src="assets/image1.jpg" alt="Youth Training Program" class="w-full h-auto object-cover rounded-lg shadow-md">
+        <img src="assets/image2.jpg" alt="Community Support Initiative" class="w-full h-auto object-cover rounded-lg shadow-md">
+      </div>
+    </section>
+  
+  </div>
 
-  <!-- Load Navbar -->
-  <script src="js/navbar.js"></script>
+  <!-- Footer (Sticky at Bottom) -->
+  <div id="footer-container" class="mt-auto">
+    <p class="text-center text-gray-500">Loading footer...</p>
+  </div>
+
+  <!-- Load Navbar & Footer -->
+  <script src="./js/navbar.js"></script>
+  <script src="./js/footer.js"></script>
+
+  <!-- No JavaScript Warning -->
+  <noscript>
+    <div class="text-center p-4 bg-red-100 text-red-600">
+      <p>⚠ JavaScript is required for full functionality.</p>
+      <p>Here are direct links:</p>
+      <nav class="mt-2">
+        <a href="index.html" class="text-blue-500 underline">Home</a> |
+        <a href="about.html" class="text-blue-500 underline">About Us</a> |
+        <a href="membership.html" class="text-blue-500 underline">Membership</a> |
+        <a href="contact.html" class="text-blue-500 underline">Contact</a>
+      </nav>
+    </div>
+  </noscript>
 
 </body>
 </html>
