--- a/about.html
+++ b/about.html
@@ -6,25 +6,28 @@
   <title>About Us | Human Rights Organization</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-gray-100 text-gray-900">
+<body class="bg-gray-100 text-gray-900 min-h-screen flex flex-col">
 
-  
    <!-- Navigation -->
    <div id="navbar-container"></div>
 
-  <!-- About Section -->
-  <section class="container mx-auto p-10">
-    <h1 class="text-3xl font-bold">About Us</h1>
-    <p class="mt-4 text-lg">We are a non-profit organization dedicated to promoting human rights and justice for all. Our mission is to create awareness, support vulnerable communities, and advocate for equality.</p>
-  </section>
+  <!-- Main Content -->
+  <div class="flex-grow">
+    <!-- About Section -->
+    <section class="container mx-auto p-10">
+      <h1 class="text-3xl font-bold">About Us</h1>
+      <p class="mt-4 text-lg">We are a non-profit organization dedicated to promoting human rights and justice for all. Our mission is to create awareness, support vulnerable communities, and advocate for equality.</p>
+    </section>
+  </div>
 
-  <!-- Footer -->
-  <footer class="bg-gray-900 text-white text-center p-4 mt-10">
-    <p>&copy; 2025 Human Rights Organization. All rights reserved.</p>
-  </footer>
+  <!-- Footer (Loaded Dynamically) -->
+  <div id="footer-container">
+    <p class="text-center text-gray-500">Loading footer...</p>
+  </div>
 
-    <!-- Load Navbar -->
-    <script src="js/navbar.js"></script>
+  <!-- Load Navbar & Footer -->
+  <script src="js/navbar.js"></script>
+  <script src="js/footer.js"></script>
 
 </body>
 </html>
