--- a/membership.html
+++ b/membership.html
@@ -6,25 +6,28 @@
   <title>Membership | Human Rights Organization</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-gray-100 text-gray-900">
+<body class="bg-gray-100 text-gray-900 min-h-screen flex flex-col">
 
-  
   <!-- Navigation -->
   <div id="navbar-container"></div>
-  <!-- Navigation -->
 
-
-  <!-- Membership Info -->
-  <section class="container mx-auto p-10">
-    <h1 class="text-3xl font-bold">Join Our Cause</h1>
-    <p class="mt-4 text-lg">Become a member and help us advocate for human rights worldwide. Your support allows us to continue our work in providing justice and equality.</p>
+  <!-- Main Content -->
+  <div class="flex-grow">
+    <!-- Membership Info -->
+    <section class="container mx-auto p-10">
+      <h1 class="text-3xl font-bold">Join Our Cause</h1>
+      <p class="mt-4 text-lg">Become a member and help us advocate for human rights worldwide. Your support allows us to continue our work in providing justice and equality.</p>
     </section>
+  </div>
 
-  <!-- Footer -->
-  <footer class="bg-gray-900 text-white text-center p-4 mt-10">
-    <p>&copy; 2025 Human Rights Organization. All rights reserved.</p>
-  </footer>
-  <!-- Load Navbar -->
+  <!-- Footer (Loaded Dynamically) -->
+  <div id="footer-container">
+    <p class="text-center text-gray-500">Loading footer...</p>
+  </div>
+
+  <!-- Load Navbar & Footer -->
   <script src="js/navbar.js"></script>
+  <script src="js/footer.js"></script>
+
 </body>
 </html>
