--- a/navbar.html
+++ b/navbar.html
@@ -3,11 +3,16 @@
   <div class="container mx-auto flex justify-between items-center">
     
     <!-- Logo and Site Name -->
-    <div class="flex items-center">
-      <img src="assets/logo.jpg" alt="Human Rights Logo" class="w-12 h-12 mr-2">
-      <a href="index.html" class="font-bold text-xl">Human Rights</a>
-    </div>
+  <!-- Logo and Site Name -->
+  <div class="flex items-center space-x-4">
+    <img src="assets/logo.jpg" alt="Human Rights Logo" 
+         class="w-32 h-32 md:w-28 md:h-28 sm:w-24 sm:h-24">
+    <a href="index.html" class="font-bold text-3xl md:text-2xl sm:text-xl">All India Human Rights Organization</a>
+  </div>
+  
 
+
+    <!-- Hamburger Menu Button -->
     <button id="menu-btn" class="md:hidden block text-white focus:outline-none">
       <svg class="w-6 h-6" fill="none" stroke="currentColor" stroke-width="2" 
         viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
@@ -16,6 +21,7 @@
       </svg>
     </button>
 
+    <!-- Desktop Menu (Visible on larger screens) -->
     <div id="menu" class="hidden md:flex space-x-6">
       <a href="index.html" class="hover:text-gray-300 transition">Home</a>
       <a href="about.html" class="hover:text-gray-300 transition">About Us</a>
@@ -25,7 +31,9 @@
   </div>
 </nav>
 
-<div id="mobile-menu" class="hidden md:hidden bg-blue-700 text-white p-4">
+<!-- Mobile Menu (Hidden by default) -->
+<div id="mobile-menu" class="hidden bg-blue-700 text-white p-4 md:hidden">
+  <a href="index.html" class="block py-2">Home</a>
   <a href="about.html" class="block py-2">About Us</a>
   <a href="membership.html" class="block py-2">Membership</a>
   <a href="contact.html" class="block py-2">Contact</a>
