--- a/index.html
+++ b/index.html
@@ -49,14 +49,14 @@
       <h2 class="text-3xl font-bold text-center mb-6">Our Work in Action</h2>
       
       <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4">
-        <img src="assets/image1.jpg" alt="Community Gathering" class="w-full h-auto object-cover rounded-lg shadow-md">
-        <img src="assets/image2.jpg" alt="Conference Discussion" class="w-full h-auto object-cover rounded-lg shadow-md">
-        <img src="assets/image3.jpg" alt="Public Speech" class="w-full h-auto object-cover rounded-lg shadow-md">
-        <img src="assets/image1.jpg" alt="Social Awareness Event" class="w-full h-auto object-cover rounded-lg shadow-md">
-        <img src="assets/image2.jpg" alt="Legal Aid Camp" class="w-full h-auto object-cover rounded-lg shadow-md">
-        <img src="assets/image3.jpg" alt="Human Rights Protest" class="w-full h-auto object-cover rounded-lg shadow-md">
-        <img src="assets/image1.jpg" alt="Youth Training Program" class="w-full h-auto object-cover rounded-lg shadow-md">
-        <img src="assets/image2.jpg" alt="Community Support Initiative" class="w-full h-auto object-cover rounded-lg shadow-md">
+        <img src="assets/image1.jpeg" alt="Community Gathering" class="w-full h-60 object-fill rounded-lg shadow-md">
+        <img src="assets/image2.jpeg" alt="Conference Discussion" class="w-full h-60 object-fill rounded-lg shadow-md">
+        <img src="assets/image3.jpg" alt="Public Speech" class="w-full h-60 object-fill rounded-lg shadow-md">
+        <img src="assets/image1.jpeg" alt="Social Awareness Event" class="w-full h-60 object-fill rounded-lg shadow-md">
+        <img src="assets/image2.jpeg" alt="Legal Aid Camp" class="w-full h-60 object-fill rounded-lg shadow-md">
+        <img src="assets/image3.jpg" alt="Human Rights Protest" class="w-full h-60 object-fill rounded-lg shadow-md">
+        <img src="assets/image1.jpeg" alt="Youth Training Program" class="w-full h-60 object-fill rounded-lg shadow-md">
+        <img src="assets/image2.jpeg" alt="Community Support Initiative" class="w-full h-60 object-fill rounded-lg shadow-md">
       </div>
     </section>
   
