--- a/index.html
+++ b/index.html
@@ -31,36 +31,87 @@
     <p class="text-center text-gray-500">Loading menu...</p>
   </div>
 
-  <!-- Main Content -->
-  <div class="flex-grow max-w-screen-xl mx-auto px-4">
+  
     
     <!-- Hero Section -->
  <!-- Hero Section -->
-<header class="mt-4 bg-gradient-to-r from-orange-400 to-red-300 text-white text-center py-12 md:py-16 px-6 md:px-12">
-    <div class="max-w-3xl mx-auto">
-      <h1 class="text-4xl font-semibold drop-shadow-lg">Defending Human Rights, Together</h1>
-      <p class="mt-4 text-lg drop-shadow-md">Join us in our mission to create a fair and just world.</p>
-    </div>
-  </header>
-  
-
-    <!-- Photo Gallery Section -->
-    <section class="px-4 py-10">
-      <h2 class="text-3xl font-bold text-center mb-6">Our Work in Action</h2>
-      
-      <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4">
-        <img src="assets/image1.jpeg" alt="Community Gathering" class="w-full h-60 object-fill rounded-lg shadow-md">
-        <img src="assets/image2.jpeg" alt="Conference Discussion" class="w-full h-60 object-fill rounded-lg shadow-md">
-        <img src="assets/image3.jpg" alt="Public Speech" class="w-full h-60 object-fill rounded-lg shadow-md">
-        <img src="assets/image1.jpeg" alt="Social Awareness Event" class="w-full h-60 object-fill rounded-lg shadow-md">
-        <img src="assets/image2.jpeg" alt="Legal Aid Camp" class="w-full h-60 object-fill rounded-lg shadow-md">
-        <img src="assets/image3.jpg" alt="Human Rights Protest" class="w-full h-60 object-fill rounded-lg shadow-md">
-        <img src="assets/image1.jpeg" alt="Youth Training Program" class="w-full h-60 object-fill rounded-lg shadow-md">
-        <img src="assets/image2.jpeg" alt="Community Support Initiative" class="w-full h-60 object-fill rounded-lg shadow-md">
-      </div>
-    </section>
-  
+ <header class="w-full mt-4 bg-gradient-to-r from-orange-400 to-red-300 text-white text-center py-12 md:py-16 px-6 md:px-12">
+  <div class="max-w-3xl mx-auto">
+    <h1 class="text-4xl font-semibold drop-shadow-lg">Defending Human Rights, Together</h1>
+    <p class="mt-4 text-lg drop-shadow-md">Join us in our mission to create a fair and just world.</p>
   </div>
+</header>
+
+  <!-- What is Human Rights Section -->
+<section class="bg-gray-100 py-12">
+  <div class="container mx-auto px-6">
+    <h2 class="text-4xl font-bold text-center text-gray-900">What is Human Rights?</h2>
+    <p class="mt-4 text-lg text-center text-gray-700 max-w-3xl mx-auto">
+      Human rights are the fundamental rights and freedoms that belong to every person, regardless of nationality, gender, ethnicity, or background.
+      They are essential for a just and fair society.
+    </p>
+
+    <!-- Sub-sections -->
+    <div class="mt-10 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
+
+      <!-- Right to Freedom -->
+      <div class="bg-white p-6 rounded-lg shadow-lg text-center">
+        <div class="text-5xl text-blue-500">🕊️</div>
+        <h3 class="text-2xl font-semibold text-gray-900 mt-4">Right to Freedom</h3>
+        <p class="mt-2 text-gray-700">
+          Every individual has the right to express themselves freely, practice their religion, and make personal choices without fear of oppression.
+        </p>
+      </div>
+
+      <!-- Right to Equality -->
+      <div class="bg-white p-6 rounded-lg shadow-lg text-center">
+        <div class="text-5xl text-green-500">⚖️</div>
+        <h3 class="text-2xl font-semibold text-gray-900 mt-4">Right to Equality</h3>
+        <p class="mt-2 text-gray-700">
+          Everyone is equal before the law and is entitled to protection against discrimination based on race, gender, or social status.
+        </p>
+      </div>
+
+      <!-- Right to Education -->
+      <div class="bg-white p-6 rounded-lg shadow-lg text-center">
+        <div class="text-5xl text-yellow-500">📚</div>
+        <h3 class="text-2xl font-semibold text-gray-900 mt-4">Right to Education</h3>
+        <p class="mt-2 text-gray-700">
+          Every person has the right to quality education, enabling them to gain knowledge and skills for a better future.
+        </p>
+      </div>
+
+      <!-- Right to Healthcare -->
+      <div class="bg-white p-6 rounded-lg shadow-lg text-center">
+        <div class="text-5xl text-red-500">🏥</div>
+        <h3 class="text-2xl font-semibold text-gray-900 mt-4">Right to Healthcare</h3>
+        <p class="mt-2 text-gray-700">
+          Access to medical care is a fundamental right, ensuring that all individuals receive necessary treatment and healthcare services.
+        </p>
+      </div>
+
+      <!-- Right to Justice -->
+      <div class="bg-white p-6 rounded-lg shadow-lg text-center">
+        <div class="text-5xl text-purple-500">⚔️</div>
+        <h3 class="text-2xl font-semibold text-gray-900 mt-4">Right to Justice</h3>
+        <p class="mt-2 text-gray-700">
+          Every person has the right to seek justice through a fair legal system and protection against unlawful actions.
+        </p>
+      </div>
+
+      <!-- Right to Work -->
+      <div class="bg-white p-6 rounded-lg shadow-lg text-center">
+        <div class="text-5xl text-orange-500">💼</div>
+        <h3 class="text-2xl font-semibold text-gray-900 mt-4">Right to Work</h3>
+        <p class="mt-2 text-gray-700">
+          All individuals have the right to fair wages, safe working conditions, and equal employment opportunities.
+        </p>
+      </div>
+
+    </div>
+  </div>
+</section>
+
 
   <!-- Footer (Sticky at Bottom) -->
   <div id="footer-container" class="mt-auto">
