--- a/about.html
+++ b/about.html
@@ -1,33 +1,117 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>About Us | Human Rights Organization</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-</head>
-<body class="bg-gray-100 text-gray-900 min-h-screen flex flex-col">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>About Us | Human Rights Organization</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+  </head>
+  <body class="bg-gray-100 text-gray-900 min-h-screen flex flex-col">
+    <!-- Navigation -->
+    <div id="navbar-container"></div>
 
-   <!-- Navigation -->
-   <div id="navbar-container"></div>
+    <!-- Main Content -->
+    <div class="flex-grow">
+      <!-- About Section -->
+      <section class="container mx-auto px-6 py-12 md:py-16">
+        <h1 class="text-4xl font-bold text-center text-gray-900">About Us</h1>
 
-  <!-- Main Content -->
-  <div class="flex-grow">
-    <!-- About Section -->
-    <section class="container mx-auto p-10">
-      <h1 class="text-3xl font-bold">About Us</h1>
-      <p class="mt-4 text-lg">We are a non-profit organization dedicated to promoting human rights and justice for all. Our mission is to create awareness, support vulnerable communities, and advocate for equality.</p>
-    </section>
-  </div>
+        <p class="mt-6 text-lg text-gray-700 text-center max-w-3xl mx-auto">
+          We are a <strong>non-profit organization</strong> dedicated to
+          advocating for
+          <strong>human rights, equality, and social justice</strong> across
+          India. Our mission is to
+          <strong
+            >empower marginalized communities, raise awareness, and take action
+            against injustice.</strong
+          >
+        </p>
 
-  <!-- Footer (Loaded Dynamically) -->
-  <div id="footer-container">
-    <p class="text-center text-gray-500">Loading footer...</p>
-  </div>
+        <div class="mt-10 space-y-6">
+           <!-- Our Mission -->
+          <div class="bg-gradient-to-r from-indigo-500 to-blue-400 p-6 rounded-lg shadow-md text-white">
+           
+            <h2 class="text-2xl font-semibold">Our Mission</h2>
+            <p class="mt-2">
+              At <strong>All India Human Rights Eagle Head Office</strong>, we
+              strive to
+              <strong>protect and promote fundamental human rights</strong> by:
+            </p>
+            <ul class="mt-3 list-disc list-inside">
+              <li>
+                Raising <strong>awareness</strong> on human rights violations.
+              </li>
+              <li>Providing <strong>legal aid</strong> to those in need.</li>
+              <li>
+                Empowering <strong>vulnerable communities</strong> through
+                education.
+              </li>
+              <li>
+                Fostering
+                <strong>social justice and equality</strong> initiatives.
+              </li>
+            </ul>
+          </div>
 
-  <!-- Load Navbar & Footer -->
-  <script src="js/navbar.js"></script>
-  <script src="js/footer.js"></script>
+          <!-- Who We Are -->
+          <div
+            class="bg-gradient-to-r from-emerald-500 to-teal-400 p-6 rounded-lg shadow-md text-white"
+          >
+            <h2 class="text-2xl font-semibold">Who We Are</h2>
+            <p class="mt-2">
+              We are a group of
+              <strong>passionate advocates, lawyers, and volunteers</strong>
+              committed to creating a society where
+              <strong>everyone’s rights are respected and protected.</strong>
+              Through
+              <strong
+                >legal assistance, community programs, and awareness
+                campaigns</strong
+              >, we work towards a more just and fair world.
+            </p>
+          </div>
 
-</body>
+          <!-- Join Our Movement -->
+          <div class="bg-gradient-to-r from-rose-500 to-pink-400 p-6 rounded-lg shadow-md text-white">
+
+
+
+            <h2 class="text-2xl font-semibold">Join Our Movement</h2>
+            <p class="mt-2">
+              Become a part of our mission! Whether you are a
+              <strong>lawyer, activist, or concerned citizen</strong>, there are
+              many ways to contribute:
+            </p>
+            <ul class="mt-3 list-disc list-inside">
+              <li><strong>Volunteer</strong> for human rights campaigns.</li>
+              <li>
+                <strong>Donate</strong> to support our legal aid and awareness
+                programs.
+              </li>
+              <li><strong>Spread the word</strong> about social injustices.</li>
+            </ul>
+            <p class="mt-4">
+              Together, we can create a
+              <strong>stronger, fairer, and more just society</strong>. Join us
+              and take a stand for human rights!
+            </p>
+          </div>
+        </div>
+
+        <p class="mt-10 text-center text-gray-600">
+          🦅 <strong>All India Human Rights Eagle Head Office</strong> –
+          Fighting for Justice, Empowering the Voiceless.
+        </p>
+      </section>
+    </div>
+
+    <!-- Footer (Loaded Dynamically) -->
+    <div id="footer-container">
+      <p class="text-center text-gray-500">Loading footer...</p>
+    </div>
+
+    <!-- Load Navbar & Footer -->
+    <script src="js/navbar.js"></script>
+    <script src="js/footer.js"></script>
+  </body>
 </html>
