--- a/navbar.html
+++ b/navbar.html
@@ -1,23 +1,20 @@
-<!-- Common Navbar (navbar.html) -->
+<!-- Common Navbar -->
 <nav class="bg-blue-600 text-white p-4">
   <div class="container mx-auto flex justify-between items-center">
     
     <!-- Logo and Site Name -->
-  <!-- Logo and Site Name -->
-  <div class="flex items-center space-x-4">
-    <img src="assets/logo.jpg" alt="Human Rights Logo" 
-         class="w-32 h-32 md:w-28 md:h-28 sm:w-24 sm:h-24">
-    <a href="index.html" class="font-bold text-3xl md:text-2xl sm:text-xl">All India Human Rights Organization</a>
-  </div>
-  
+    <div class="flex items-center space-x-4">
+      <img src="assets/logo.jpeg" alt="Human Rights Logo" 
+        class="w-40 h-40 md:w-32 md:h-32 sm:w-28 sm:h-28">
 
+      <a href="index.html" class="font-bold text-xl md:text-2xl">All India Human Rights Organization</a>
+    </div>
 
-    <!-- Hamburger Menu Button -->
+    <!-- Hamburger Menu Button (Mobile) -->
     <button id="menu-btn" class="md:hidden block text-white focus:outline-none">
-      <svg class="w-6 h-6" fill="none" stroke="currentColor" stroke-width="2" 
+      <svg class="w-8 h-8" fill="none" stroke="currentColor" stroke-width="2" 
         viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-        <path stroke-linecap="round" stroke-linejoin="round" 
-          d="M4 6h16M4 12h16m-7 6h7"></path>
+        <path stroke-linecap="round" stroke-linejoin="round" d="M4 6h16M4 12h16m-7 6h7"></path>
       </svg>
     </button>
 
@@ -25,16 +22,16 @@
     <div id="menu" class="hidden md:flex space-x-6">
       <a href="index.html" class="hover:text-gray-300 transition">Home</a>
       <a href="about.html" class="hover:text-gray-300 transition">About Us</a>
-      <a href="membership.html" class="hover:text-gray-300 transition">Membership</a>
+      <a href="albums.html" class="hover:text-gray-300 transition">Our Albums</a>
       <a href="contact.html" class="hover:text-gray-300 transition">Contact</a>
     </div>
   </div>
 </nav>
 
 <!-- Mobile Menu (Hidden by default) -->
-<div id="mobile-menu" class="hidden bg-blue-700 text-white p-4 md:hidden">
-  <a href="index.html" class="block py-2">Home</a>
-  <a href="about.html" class="block py-2">About Us</a>
-  <a href="membership.html" class="block py-2">Membership</a>
-  <a href="contact.html" class="block py-2">Contact</a>
+<div id="mobile-menu" class="hidden bg-blue-700 text-white p-4 md:hidden space-y-3">
+  <a href="index.html" class="block py-2 hover:bg-blue-800 rounded-md px-4 transition">Home</a>
+  <a href="about.html" class="block py-2 hover:bg-blue-800 rounded-md px-4 transition">About Us</a>
+  <a href="albums.html" class="block py-2 hover:bg-blue-800 rounded-md px-4 transition">Our Albums</a>
+  <a href="contact.html" class="block py-2 hover:bg-blue-800 rounded-md px-4 transition">Contact</a>
 </div>
