--- a/albums.html
+++ b/albums.html
@@ -29,7 +29,7 @@
       <!-- Organization Leaders Section -->
       <section class="w-full md:w-1/2 text-center">
         <h2 class="text-3xl font-bold mb-3">Organization Leaders</h2>
-        <p class="mt-4 text-lg text-red-500 font-semibold mb-4">
+        <p class="mt-4 text-lg text-red-400 font-semibold mb-4">
           Meet the inspiring leaders who are driving change and advocating for human rights.
         </p>
 
@@ -39,7 +39,7 @@
             class="block w-3/4 bg-gradient-to-r from-blue-600 to-indigo-500 text-white font-semibold text-center text-lg rounded-lg py-12 shadow-lg hover:brightness-110 hover:shadow-xl hover:scale-105 transition duration-300">
             
             <p class="text-xl font-semibold flex items-center justify-center space-x-2">
-              <span>👁️</span> <span>View Leadership Album</span>
+              <span>👁️</span> <span>View Leaders Album</span>
             </p>
             
           </a>
@@ -49,7 +49,7 @@
       <!-- Our Work in Action Section -->
       <section class="w-full md:w-1/2 text-center">
         <h2 class="text-3xl font-bold mb-3">Our Work in Action</h2>
-        <p class="mt-4 text-lg text-red-500 font-semibold mb-4">
+        <p class="mt-4 text-lg text-red-400 font-semibold mb-4">
           A glimpse into our events, campaigns, and efforts to support human rights.
         </p>
 
