--- a/navbar.html
+++ b/navbar.html
@@ -7,7 +7,7 @@
       <img src="assets/logo.jpeg" alt="Human Rights Logo" 
         class="w-40 h-40 md:w-32 md:h-32 sm:w-28 sm:h-28">
 
-      <a href="index.html" class="font-bold text-xl md:text-2xl">All India Human Rights Organization</a>
+      <a href="index.html" class="font-bold text-xl md:text-2xl">ALL INDIA HUMAN RIGHTS ORGANIZATION EAGLLE </a>
     </div>
 
     <!-- Hamburger Menu Button (Mobile) -->
@@ -22,8 +22,9 @@
     <div id="menu" class="hidden md:flex space-x-6">
       <a href="index.html" class="hover:text-gray-300 transition">Home</a>
       <a href="about.html" class="hover:text-gray-300 transition">About Us</a>
+      <a href="leaders.html" class="hover:text-gray-300 transition">Our Leaders</a>
       <a href="albums.html" class="hover:text-gray-300 transition">Our Albums</a>
-      <a href="contact.html" class="hover:text-gray-300 transition">Contact</a>
+      <a href="contact.html" class="hover:text-gray-300 transition">Contact Us</a>
     </div>
   </div>
 </nav>
