--- a/contact.html
+++ b/contact.html
@@ -61,12 +61,12 @@
 
         <!-- Contact Form -->
         <div class="mt-12 bg-white p-8 rounded-lg shadow-lg max-w-2xl mx-auto">
-          <h2 class="text-2xl font-bold text-gray-900 text-center">
+          <h2 class="text-2xl font-bold text-gray-900 text-center mb-4">
             Send Us a Message
           </h2>
           <form action="mailto:aihroeaglei0@gmail.com" method="GET">
             <div class="mb-4">
-              <label class="block text-gray-700">Full Name</label>
+              <label class="block text-gray-700 mb-2">Full Name</label>
               <input
                 type="text"
                 name="subject"
@@ -76,7 +76,7 @@
               />
             </div>
             <div class="mb-4">
-              <label class="block text-gray-700">Message</label>
+              <label class="block text-gray-700 mb-2">Message</label>
               <textarea
                 name="body"
                 class="w-full px-4 py-2 border rounded-lg focus:ring focus:ring-blue-300"
