--- a/navbar.html
+++ b/navbar.html
@@ -1,13 +1,14 @@
 <!-- Common Navbar -->
 <nav class="bg-blue-600 text-white p-4">
-  <div class="container mx-auto flex justify-between items-center">
+  <div class="container flex justify-between items-center">
     
     <!-- Logo and Site Name -->
     <div class="flex items-center space-x-4">
       <img src="assets/logo.jpeg" alt="Human Rights Logo" 
-        class="w-40 h-40 md:w-32 md:h-32 sm:w-28 sm:h-28">
+      class="w-48 h-48 md:w-40 md:h-40 sm:w-36 sm:h-36">
+  
 
-      <a href="index.html" class="font-bold text-xl md:text-2xl">ALL INDIA HUMAN RIGHTS ORGANIZATION EAGLLE </a>
+      <a href="index.html" class="font-bold text-xl md:text-2xl">ALL INDIA HUMAN RIGHTS ORGANIZATION EAGLE </a>
     </div>
 
     <!-- Hamburger Menu Button (Mobile) -->
