--- a/navbar.html
+++ b/navbar.html
@@ -8,7 +8,11 @@
       class="w-48 h-48 md:w-40 md:h-40 sm:w-36 sm:h-36">
   
 
-      <a href="index.html" class="font-bold text-xl md:text-2xl">ALL INDIA HUMAN RIGHTS ORGANIZATION EAGLE </a>
+      <a href="index.html" 
+   class="font-bold text-lg sm:text-xl md:text-2xl lg:text-3xl xl:text-4xl text-center leading-tight">
+   ALL INDIA HUMAN RIGHTS ORGANIZATION EAGLE
+</a>
+
     </div>
 
     <!-- Hamburger Menu Button (Mobile) -->
