--- a/index.html
+++ b/index.html
@@ -26,10 +26,9 @@
 </head>
 <body class="bg-gray-100 text-gray-900 min-h-screen flex flex-col">
 
-  <!-- Navigation -->
-  <div id="navbar-container">
-    <p class="text-center text-gray-500">Loading menu...</p>
-  </div>
+
+    <!-- Navigation -->
+  <div id="navbar-container"></div>
 
   
     
