--- a/navbar.html
+++ b/navbar.html
@@ -40,6 +40,7 @@
 <div id="mobile-menu" class="hidden bg-blue-700 text-white p-4 md:hidden space-y-3">
   <a href="index.html" class="block py-2 hover:bg-blue-800 rounded-md px-4 transition">Home</a>
   <a href="about.html" class="block py-2 hover:bg-blue-800 rounded-md px-4 transition">About Us</a>
+   <a href="leaders.html" class="block py-2 hover:bg-blue-800 rounded-md px-4 transition">Our Leaders</a>
   <a href="albums.html" class="block py-2 hover:bg-blue-800 rounded-md px-4 transition">Our Albums</a>
-  <a href="contact.html" class="block py-2 hover:bg-blue-800 rounded-md px-4 transition">Contact</a>
+  <a href="contact.html" class="block py-2 hover:bg-blue-800 rounded-md px-4 transition">Contact Us</a>
 </div>
