--- a/navbar.html
+++ b/navbar.html
@@ -16,11 +16,11 @@
     </div>
 
     <!-- Hamburger Menu Button (Mobile) -->
-   <button id="menu-btn" class="md:hidden block text-red-800 focus:outline-none">
-  <svg class="w-8 h-8" fill="none" stroke="currentColor" stroke-width="2" 
+  <button id="menu-btn" class="md:hidden block text-black-800 focus:outline-none">
+  <svg class="w-8 h-8 pb-4 pl-4" fill="none" stroke="currentColor" stroke-width="2" 
     viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
     <path stroke-linecap="round" stroke-linejoin="round" 
-      stroke="red" d="M4 6h16M4 12h16m-7 6h7">
+      stroke="black" d="M4 6h16M4 12h16m-7 6h7">
     </path>
   </svg>
 </button>
