--- a/navbar.html
+++ b/navbar.html
@@ -4,8 +4,14 @@
     
     <!-- Logo and Site Name -->
     <div class="flex items-center space-x-4">
-      <img src="assets/logo.jpeg" alt="Human Rights Logo" 
-      class="w-48 h-48 md:w-40 md:h-40 sm:w-36 sm:h-36">
+    <div class="flex justify-center">
+        <img
+          src="assets/logo.jpeg"
+          alt="Human Rights Logo"
+          class="w-full max-w-[12rem] md:max-w-[10rem] sm:max-w-[8rem] xs:max-w-[6rem]"
+        />
+      </div>
+
   
 
       <a href="index.html" 
