--- a/leaders.html
+++ b/leaders.html
@@ -23,7 +23,7 @@
                     class="w-full h-72 object-contain">
                 <div class="p-6 text-center">
                     <h3 class="text-xl font-bold text-red-700">R.N Basheer</h3>
-                    <p class="text-md font-semibold text-blue-700">Human Rights Advocate</p>
+                    <p class="text-md font-semibold text-blue-700">All India President</p>
                 </div>
             </div>
     
@@ -113,8 +113,8 @@
                 <img src="assets/Leaders-Album/img9.jpeg" alt="Leader 10" 
                     class="w-full h-72 object-contain pt-4">
                 <div class="p-6 text-center">
-                    <h3 class="text-xl font-bold text-red-700">Taj Basha </h3>
-                    <p class="text-md font-semibold text-blue-700">Royal Seema president</p>
+                    <h3 class="text-xl font-bold text-red-700">Dr. M. Taaj Basha </h3>
+                    <p class="text-md font-semibold text-blue-700">Royal Seema Minority Wing President</p>
                 </div>
             </div>
     
