--- a/leaders.html
+++ b/leaders.html
@@ -22,7 +22,7 @@
                 <img src="assets/Leaders-Album/HR-President.jpeg" alt="Leader 1" 
                     class="w-full h-72 object-contain">
                 <div class="p-6 text-center">
-                    <h3 class="text-xl font-bold text-red-700">R.N Basheer</h3>
+                    <h3 class="text-xl font-bold text-red-700 uppercase">R.N Basheer</h3>
                     <p class="text-md font-semibold text-blue-700">All India President</p>
                 </div>
             </div>
@@ -32,7 +32,7 @@
                 <img src="assets/Leaders-Album/img1.jpeg" alt="Leader 2" 
                     class="w-full h-72 object-contain pt-4">
                 <div class="p-6 text-center">
-                    <h3 class="text-xl font-bold text-red-700">Surendra</h3>
+                    <h3 class="text-xl font-bold text-red-700 uppercase">Surendra</h3>
                     <p class="text-md font-semibold text-blue-700">All India Vice President</p>
                 </div>
             </div>
@@ -42,7 +42,7 @@
                 <img src="assets/Leaders-Album/img2.jpeg" alt="Leader 3" 
                     class="w-full h-72 object-contain pt-4">
                 <div class="p-6 text-center">
-                    <h3 class="text-xl font-bold text-red-700">Md Ali </h3>
+                    <h3 class="text-xl font-bold text-red-700 uppercase">Md Ali </h3>
                     <p class="text-md font-semibold text-blue-700">All India minority wing organisation secretary</p>
                 </div>
             </div>
@@ -52,7 +52,7 @@
                 <img src="assets/Leaders-Album/img3.jpeg" alt="Leader 4" 
                     class="w-full h-72 object-contain pt-4">
                 <div class="p-6 text-center">
-                    <h3 class="text-xl font-bold text-red-700">Satish </h3>
+                    <h3 class="text-xl font-bold text-red-700 uppercase">Satish </h3>
                     <p class="text-md font-semibold text-blue-700">All India Legal Advisor</p>
                 </div>
             </div>
@@ -62,7 +62,7 @@
                 <img src="assets/Leaders-Album/img4.jpeg" alt="Leader 5" 
                     class="w-full h-72 object-contain pt-4">
                 <div class="p-6 text-center">
-                    <h3 class="text-xl font-bold text-red-700">Mr,GANESH KANDA SWAMY
+                    <h3 class="text-xl font-bold text-red-700 uppercase">Mr,GANESH KANDA SWAMY
                         </h3>
                     <p class="text-md font-semibold text-blue-700">RANIPET DISTRICT PRESIDENT (TN)</p>
                 </div>
@@ -73,7 +73,7 @@
                 <img src="assets/Leaders-Album/img5.jpeg" alt="Leader 6" 
                     class="w-full h-72 object-contain pt-4">
                 <div class="p-6 text-center">
-                    <h3 class="text-xl font-bold text-red-700">Pns Raydu </h3>
+                    <h3 class="text-xl font-bold text-red-700 uppercase">Pns Raydu </h3>
                     <p class="text-md font-semibold text-blue-700">AP President</p>
                 </div>
             </div>
@@ -83,7 +83,7 @@
                 <img src="assets/Leaders-Album/img6.jpeg" alt="Leader 7" 
                     class="w-full h-72 object-contain pt-4">
                     <div class="p-6 text-center">
-                        <h3 class="text-xl font-bold text-red-700">Mubarak Ali</h3>
+                        <h3 class="text-xl font-bold text-red-700 uppercase">Mubarak Ali</h3>
                         <p class="text-md font-semibold text-blue-700">Active President</p>
                     </div>
             </div>
@@ -93,7 +93,7 @@
                 <img src="assets/Leaders-Album/img7.jpeg" alt="Leader 8" 
                     class="w-full h-72 object-contain pt-4">
                 <div class="p-6 text-center">
-                    <h3 class="text-xl font-bold text-red-700">Syed Muzammil </h3>
+                    <h3 class="text-xl font-bold text-red-700 uppercase">Syed Muzammil </h3>
                     <p class="text-md font-semibold text-blue-700">Karnataka state activ General Secretary</p>
                 </div>
             </div>
@@ -103,7 +103,7 @@
                 <img src="assets/Leaders-Album/img8.jpeg" alt="Leader 9" 
                     class="w-full h-72 object-contain pt-4">
                 <div class="p-6 text-center">
-                    <h3 class="text-xl font-bold text-red-700">MD Bashir </h3>
+                    <h3 class="text-xl font-bold text-red-700 uppercase">MD Bashir </h3>
                     <p class="text-md font-semibold text-blue-700">All India manner during vice president</p>
                 </div>
             </div>
@@ -113,7 +113,7 @@
                 <img src="assets/Leaders-Album/img9.jpeg" alt="Leader 10" 
                     class="w-full h-72 object-contain pt-4">
                 <div class="p-6 text-center">
-                    <h3 class="text-xl font-bold text-red-700">Dr. M. Taaj Basha </h3>
+                    <h3 class="text-xl font-bold text-red-700 uppercase">Dr. M. Taaj Basha </h3>
                     <p class="text-md font-semibold text-blue-700">Royal Seema Minority Wing President</p>
                 </div>
             </div>
@@ -123,7 +123,7 @@
                 <img src="assets/Leaders-Album/img10.jpeg" alt="Leader 11" 
                     class="w-full h-72 object-contain pt-4">
                 <div class="p-6 text-center">
-                    <h3 class="text-xl font-bold text-red-700">Dr.RAQIB ABBAS </h3>
+                    <h3 class="text-xl font-bold text-red-700 uppercase">Dr.RAQIB ABBAS </h3>
                     <p class="text-md font-semibold text-blue-700">TAMILNADU STATE YOUTH PRESiDANT</p>
                 </div>
             </div>
@@ -133,7 +133,7 @@
                 <img src="assets/Leaders-Album/img11.jpeg" alt="Leader 12" 
                     class="w-full h-72 object-contain pt-4">
                 <div class="p-6 text-center">
-                    <h3 class="text-xl font-bold text-red-700">MR.PRAKASH SANTHA KUMAR
+                    <h3 class="text-xl font-bold text-red-700 uppercase">MR.PRAKASH SANTHA KUMAR
                          </h3>
                     <p class="text-md font-semibold text-blue-700">CHENGALPATTU DISTRICT PRESIDENT</p>
                 </div>
@@ -144,7 +144,7 @@
                 <img src="assets/Leaders-Album/img12.jpeg" alt="Leader 12" 
                     class="w-full h-72 object-contain pt-4">
                 <div class="p-6 text-center">
-                    <h3 class="text-xl font-bold text-red-700">Mr,DEENA DAYALAN PERUMAL 
+                    <h3 class="text-xl font-bold text-red-700 uppercase">Mr,DEENA DAYALAN PERUMAL 
                         
                          </h3>
                     <p class="text-md font-semibold text-blue-700">TAMILNADU STATE YOUTH GENERAL SECRATARY</p>
@@ -156,7 +156,7 @@
                 <img src="assets/Leaders-Album/img13.jpeg" alt="Leader 12" 
                     class="w-full h-72 object-contain pt-4">
                 <div class="p-6 text-center">
-                    <h3 class="text-xl font-bold text-red-700">Praveen Kumar 
+                    <h3 class="text-xl font-bold text-red-700 uppercase">Praveen Kumar 
                          </h3>
                     <p class="text-md font-semibold text-blue-700">AP state legal racer</p>
                 </div>
