--- a/navbar.html
+++ b/navbar.html
@@ -16,7 +16,7 @@
 
       <a href="index.html" 
    class="font-bold text-lg sm:text-xl md:text-2xl lg:text-3xl xl:text-4xl text-center leading-tight">
-   ALL INDIA HUMAN RIGHTS ORGANIZATION EAGLE
+   ALL INDIA HUMAN RIGHTS ORGANIZATION EAGLE 🦅
 </a>
 
     </div>
