--- a/index.html
+++ b/index.html
@@ -3,12 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Home | Human Rights Organization</title>
-
-  <!-- SEO Meta Tags -->
-  <meta name="description" content="We defend human rights and promote justice. Join us in making the world fair and equal for everyone.">
-  <meta name="keywords" content="human rights, justice, equality, NGO, activism">
-  <meta name="author" content="Human Rights Organization">
+  <title>AiHROEI – All India Human Rights Organisation Eagle I</title>
+  <meta name="description" content="Official site of AiHROEI (All India Human Rights Organisation Eagle I), dedicated to protecting and promoting human rights across India.">
+  <meta name="keywords" content="AiHROEI, Human Rights, India, NGO, All India Human Rights Organisation, Eagle I">
+  <meta name="author" content="AiHROEI">
+  <link rel="canonical" href="https://aihroei.info/" />
 
   <!-- Tailwind CSS -->
   <script src="https://cdn.tailwindcss.com"></script>
