--- a/leaders.html
+++ b/leaders.html
@@ -166,7 +166,17 @@
                     <p class="text-md font-semibold text-blue-700 uppercase">Andhra Pradesh State Legal Advisor</p>
                 </div>
             </div>
-    
+
+             <!-- Leader 15 -->
+            <div class="bg-white shadow-lg rounded-lg overflow-hidden transition transform hover:scale-105 hover:shadow-xl">
+                <img src="assets/Leaders-Album/img14.jpeg" alt="Leader 14" 
+                    class="w-full h-72 object-contain pt-4">
+                <div class="p-6 text-center">
+                    <h3 class="text-xl font-bold text-red-700 uppercase">Naseer Ahmed Maved 
+                         </h3>
+                    <p class="text-md font-semibold text-blue-700 uppercase">Karnataka state minority wing president</p>
+                </div>
+            </div>
         </div>
     </section>
     
@@ -183,3 +193,4 @@
 
 </body>
 </html>
+
